# newsletter-crawler

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ai_information_data/: api.py  dao.py  models.py  monitor_services.py  service.py  sync_tj_service.py  tj_cos.py
constants/: __init__.py
db/: models.py
job/: craw_job.py  job_register.py  retry_job.py  sync_data_job.py  tag_job.py  tj_job.py
settings/: settings.py
sql/: todo_data_sql.py
src/: main.py
src/ai_information_data/: api.py  dao.py  monitor_services.py  service.py  services.py
src/settings/: models.py  settings.py
src/test/: 6.py  test.py
src/utils/: ai_consumer_utils.py  fire_crawl_utils.py
test/: test3.py  test5.py
test_case/: test.py  test2.py  test4.py  test6.py
utils/: ai_consumer_utils.py  date_util.py  fire_crawl_utils.py  redis_utils.py  snowflake_util.py
